--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,15 +57,13 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
         <activity
-<<<<<<< HEAD
             android:name=".PaymentActivity"
             android:label="payment"
             android:windowSoftInputMode="adjustPan"></activity>
-=======
+        <activity
             android:name=".AboutActivity"
             android:label="@string/title_activity_maps"
             android:theme="@android:style/Theme.Light.NoTitleBar"/>
->>>>>>> refs/remotes/origin/about_activity
     </application>
 
 </manifest>
