--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme"
+        android:largeHeap="true"
         tools:replace="android:icon">
 
         <!--
@@ -64,7 +65,7 @@
         <activity
             android:name=".AboutActivity"
             android:label="@string/title_activity_maps"
-            android:theme="@android:style/Theme.Light.NoTitleBar"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
     </application>
 
 </manifest>
