--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
             android:name=".AboutActivity"
             android:label="@string/title_activity_maps"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
+        <activity android:name=".MilesActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
     </application>
 
 </manifest>
